レイアウト調整

--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -1,9 +1,8 @@
 <div class="container mx-auto px-4 w-full">
-  <div class="mb-4 flex">
+  <div class="mb-4">
     <h1>動画取得</h1>
     <%= form_with url: fetch_videos_by_genre_youtube_videos_path, method: :get, local: true, class: "w-full" do |form| %>
-      <%= form.label :genre, "ジャンルまたはキーワード", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
-      <%= form.text_field :genre, class: "input input-bordered w-full" %>
+      <%= form.text_field :genre, class: "input input-bordered input-lg" , placeholder: "ジャンル or キーワード" %>
       <%= form.submit "取得", class: "btn" %>
     <% end %>
   </div>
