--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -1,7 +1,7 @@
 <div class="p-2 flex-1 lg:max-w-1/3">
   <div id="<%= dom_id(note) %>" class="card w-96 bg-base-100 shadow-xl hover:shadow-2xl transition-shadow duration-300 mb-3">
     <div class="card-body">
-      <img src="<%= note.user.avatar_url %>" alt="Profile image" width="50" height="50">
+      <%= image_tag(note.user.avatar.url, width: '100', height: '100') %>
       <p>
         <span class="font-bold">ユーザー名:</span>
         <%= note.user.name %>
