--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,29 +1,28 @@
 <% content_for(:title, t('.title')) %>
-<div class="container">
-  <div class="row">
-    <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-      <h1><%= t '.title' %></h1>
-      <%= form_with model: @user, url: user_path(@user), local: true do |f| %>
-        <div class="form-group">
-          <%= f.label :avatar %>
-          <%= f.file_field :avatar, class: 'form-control', accept: 'image/*' %>
+<div class="container mx-auto p-5">
+  <div class="flex justify-center">
+    <div class="w-full lg:w-3/4">
+      <h1 class="text-center text-3xl font-bold mb-6"><%= t '.title' %></h1>
+      <%= form_with model: @user, url: user_path(@user), local: true, class: "space-y-4" do |f| %>
+        <div class="form-control">
+          <%= f.label :avatar, class: 'label' %>
+          <div class="input-group">
+            <%= f.file_field :avatar, class: 'input input-bordered', accept: 'image/*' %>
+          </div>
           <%= f.hidden_field :avatar_cache %>
-          <div class='mt-3 mb-3'>
-            <%= image_tag @user.avatar.url,
-                          class: 'rounded-circle',
-                          id: 'preview',
-                          size: '100x100' %>
+          <div class="mt-3 mb-3">
+            <%= image_tag @user.avatar.url, class: 'rounded-full', id: 'preview', size: '100x100' %>
           </div>
         </div>
-        <div class="form-group">
-          <%= f.label :email %>
-          <%= f.email_field :email, class: 'form-control' %>
+        <div class="form-control">
+          <%= f.label :email, class: 'label' %>
+          <%= f.email_field :email, class: 'input input-bordered' %>
         </div>
-        <div class="form-group">
-          <%= f.label :name %>
-          <%= f.text_field :name, class: 'form-control' %>
+        <div class="form-control">
+          <%= f.label :name, class: 'label' %>
+          <%= f.text_field :name, class: 'input input-bordered' %>
         </div>
-        <%= f.submit class: 'btn btn-primary' %>
+        <%= f.submit '更新', class: 'btn btn-primary w-full mt-4' %>
       <% end %>
     </div>
   </div>
