レイアウト調整

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <% else %>
       <%= render partial: 'shared/before_login_header' %>
     <% end %>
-    <div class="px-4">
+    <div class="px-4 bg-base-100 w-full">
       <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 d-flex align-items-center justify-content-center" style="min-height: 100vh;">
         <%= render 'shared/flash_message' %>
         <%= yield %>
