--- a/app/views/notes/_form_youtube.html.erb
+++ b/app/views/notes/_form_youtube.html.erb
@@ -20,7 +20,7 @@
       <%= f.label :is_visible, "表示", class: "label" %>
       <%= f.select :is_visible, [['表示する', true], ['表示しない', false]], {}, { class: "select select-bordered" } %>
     </div>
-    <%= f.submit "投稿", class: 'btn btn-primary mt-4' %>
+    <%= f.submit "投稿", class: 'btn btn-outline btn-primary mt-4' %>
   <% end %>
 </div>
 <script>
