--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -10,7 +10,7 @@
         <span class="font-bold">タイムスタンプ:</span>
         <%= link_to note.video_timestamp, '#',
                     onclick: "playFromTimestamp(#{video_timestamp_to_seconds(note.video_timestamp)}); return false;",
-                    class: "link link-hover" %>
+                    class: "btn btn-outline btn-accent link-hover" %>
       </p>
       <p>
         <span class="font-bold">メモ:</span>
@@ -22,10 +22,10 @@
       <% if note.persisted? && current_user == note.user %>
         <div class="card-actions justify-end">
           <% if note.youtube_video.present? %>
-            <%= link_to 'Xでシェア', "https://x.com/share?url=#{request.url}&text=#{ERB::Util.url_encode("【シェア】\nタイムスタンプ: #{note.video_timestamp} \nメモ: #{note.content} \nYouTube: https://www.youtube.com/watch?v=#{note.youtube_video.youtube_id}&t=#{video_timestamp_to_seconds(note.video_timestamp)}s")}", target: '_blank', class: 'btn btn-primary' %>
+            <%= link_to 'Xでシェア', "https://x.com/share?url=#{request.url}&text=#{ERB::Util.url_encode("【シェア】\nタイムスタンプ: #{note.video_timestamp} \nメモ: #{note.content} \nYouTube: https://www.youtube.com/watch?v=#{note.youtube_video.youtube_id}&t=#{video_timestamp_to_seconds(note.video_timestamp)}s")}", target: '_blank', class: 'btn btn-outline btn-primary' %>
           <% end %>
-          <%= link_to '編集', edit_path_for(note), data: { turbo_frame: dom_id(note) }, class: 'btn btn-info' %>
-          <%= link_to '削除', delete_path_for(note), data: { turbo_method: :delete, turbo_confirm: t('defaults.delete_confirm')}, class: 'btn btn-error' %>
+          <%= link_to '編集', edit_path_for(note), data: { turbo_frame: dom_id(note) }, class: 'btn btn-outline btn-info' %>
+          <%= link_to '削除', delete_path_for(note), data: { turbo_method: :delete, turbo_confirm: t('defaults.delete_confirm')}, class: 'btn btn-outline btn-error' %>
         </div>
       <% end %>
     </div>
