--- a/app/views/youtube_videos/show.html.erb
+++ b/app/views/youtube_videos/show.html.erb
@@ -13,12 +13,12 @@
       <%= link_to 'いいねを取り消す', youtube_video_like_path(@youtube_video, user_like, likeable_type: @youtube_video.class.name, likeable_id: @youtube_video.id),
                   data: { turbo_method: :delete, turbo_frame: "like_button" },
                   remote: true,
-                  class: 'btn btn-warning' %>
+                  class: 'btn btn-outline btn-warning' %>
     <% else %>
       <%= link_to 'いいね', youtube_video_likes_path(@youtube_video, likeable_type: @youtube_video.class.name, likeable_id: @youtube_video.id),
                   data: { turbo_method: :post, turbo_frame: "like_button" },
                   remote: true,
-                  class: 'btn btn-success' %>
+                  class: 'btn btn-outline btn-success' %>
     <% end %>
   </div>
   <%= render 'notes/form_youtube' %>
@@ -40,7 +40,7 @@
       <p id="no_notes_message">メモがありません。</p>
     <% end %>
   </div>
-  <%= link_to '戻る', youtube_videos_path, class: 'btn btn-primary', style: 'margin-top: 20px;' %>
+  <%= link_to '戻る', youtube_videos_path, class: 'btn btn-outline btn-info', style: 'margin-top: 20px;' %>
 </div>
 
 <script>
