--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto px-4 w-full">
+<div class="container px-4 w-full">
   <div class="mb-4">
     <h1>動画取得</h1>
     <%= form_with url: fetch_videos_by_genre_youtube_videos_path, method: :get, local: true, class: "w-full" do |form| %>
