--- a/app/views/youtube_videos/show.html.erb
+++ b/app/views/youtube_videos/show.html.erb
@@ -1,8 +1,11 @@
 <div class="container">
   <h1><%= @youtube_video.title %></h1>
   <!-- 動画の埋め込み表示 -->
-  <div>
-    <iframe class="w-full aspect-video" id="youtube-video" height="300" src="https://www.youtube.com/embed/<%= @youtube_video.youtube_id %>?playsinline=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <div class="video-wrapper">
+    <iframe class="w-full aspect-video" id="youtube-video"
+            src="https://www.youtube.com/embed/<%= @youtube_video.youtube_id %>?playsinline=1"
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
   </div>
   <p>公開日: <%= @youtube_video.published_at %></p>
   <p>動画時間: <%= format_duration(@youtube_video.duration) %></p>
@@ -60,3 +63,21 @@
     videoFrame.contentWindow.postMessage('{"event":"command","func":"playVideo","args":""}', '*');
   }
 </script>
+
+<style>
+.video-wrapper {
+  position: relative;
+  padding-top: 56.25%;
+  height: 0;
+  overflow: hidden;
+  z-index: 10;
+}
+
+.video-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+</style>
