諸々レイアウトを調整

--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -10,7 +10,7 @@
         <span class="font-bold">タイムスタンプ:</span>
         <%= link_to note.video_timestamp, '#',
                     onclick: "playFromTimestamp(#{video_timestamp_to_seconds(note.video_timestamp)}); return false;",
-                    class: "btn btn-outline btn-accent link-hover" %>
+                    class: "btn btn-outline link-hover" %>
       </p>
       <p>
         <span class="font-bold">メモ:</span>
