--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -1,4 +1,4 @@
-<header class="bg-base-100">
+<header class="bg-primary flex w-full px-4 sm:px-6 lg:px-8">
   <div class="navbar container mx-auto flex justify-between">
     <div class="flex-initial">
       <%= link_to 'ViMemo', root_path, class: "btn btn-ghost normal-case text-xl" %>
