--- a/app/views/youtube_videos/show.html.erb
+++ b/app/views/youtube_videos/show.html.erb
@@ -31,10 +31,9 @@
       note.content.present? && (note.is_visible || (current_user && note.user_id == current_user.id))
     end %>
     <% if visible_notes.any? %>
-      <div class="flex flex-wrap mx-2">
+      <div class="flex flex-wrap">
         <% visible_notes.each do |note| %>
-          <!-- 各メモをflex-1として配置、幅を調整 -->
-          <div class="p-2 flex-1 lg:max-w-1/3">
+          <div class="p-2 flex lg:max-w-1/3">
             <%= render 'notes/note', note: note %>
           </div>
         <% end %>
