--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -22,7 +22,7 @@
           <%= f.label :name, class: 'label' %>
           <%= f.text_field :name, class: 'input input-bordered' %>
         </div>
-        <%= f.submit '更新', class: 'btn btn-primary w-full mt-4' %>
+        <%= f.submit '更新', class: 'btn btn-primary mt-4' %>
       <% end %>
     </div>
   </div>
