--- a/app/views/youtube_videos/index.html.erb
+++ b/app/views/youtube_videos/index.html.erb
@@ -4,8 +4,8 @@
     <%= render 'shared/search_form', q: @q %>
   </div>
   <div class="mb-4">
-    <%= link_to 'いいね数が多い順', youtube_videos_path(sort: 'likes_desc', q: params[:q]), class: "btn btn-primary" %>
-    <%= link_to 'メモ数が多い順', youtube_videos_path(sort: 'notes_desc', q: params[:q]), class: "btn btn-primary" %>
+    <%= link_to 'いいね数が多い順', youtube_videos_path(sort: 'likes_desc', q: params[:q]), class: "btn btn-accent" %>
+    <%= link_to 'メモ数が多い順', youtube_videos_path(sort: 'notes_desc', q: params[:q]), class: "btn btn-accent" %>
   </div>
   <div class="flex justify-center">
     <div class="w-full">
