--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,28 +1,38 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-10 col-lg-8 mx-auto">
-      <h1>ユーザー登録</h1>
+    <div class="col-md-10 col-lg-8">
+      <h1 class="text-3xl font-bold text-center mb-6">ユーザー登録</h1>
       <%= form_with(model: @user, data: { turbo: false }) do |f| %>
-        <div class="mb-3">
-          <%= f.label :name, class: "form-label" %>
-          <%= f.text_field :name, class: "form-control" %>
+        <div class="form-control">
+          <%= f.label :name, class: "label" %>
+          <div class="input-group">
+            <%= f.text_field :name, class: "input input-bordered" %>
+          </div>
         </div>
-        <div class="mb-3">
-          <%= f.label :email, class: "form-label" %>
-          <%= f.email_field :email, class: "form-control" %>
+        <div class="form-control">
+          <%= f.label :email, class: "label" %>
+          <div class="input-group">
+            <%= f.email_field :email, class: "input input-bordered" %>
+          </div>
         </div>
-        <div class="mb-3">
-          <%= f.label :password, class: "form-label" %>
-          <%= f.password_field :password, class: "form-control" %>
+        <div class="form-control">
+          <%= f.label :password, class: "label" %>
+          <div class="input-group">
+            <%= f.password_field :password, class: "input input-bordered" %>
+          </div>
         </div>
-        <div class="mb-3">
-          <%= f.label :password_confirmation, class: "form-label" %>
-          <%= f.password_field :password_confirmation, class: "form-control" %>
+        <div class="form-control mb-3">
+          <%= f.label :password_confirmation, class: "label" %>
+          <div class="input-group">
+            <%= f.password_field :password_confirmation, class: "input input-bordered" %>
+          </div>
         </div>
-        <%= f.submit "登録", class: "btn btn-primary" %>
+        <div class="form-control mt-6">
+          <%= f.submit "登録", class: "btn btn-primary" %>
+        </div>
       <% end %>
-      <div class='text-center'>
-        <%= link_to 'ログインページへ', login_path %>
+      <div class='text-center mt-4'>
+        <%= link_to 'ログインページへ', login_path, class: "link link-hover" %>
       </div>
     </div>
   </div>
