--- a/app/views/combined_videos/index.html.erb
+++ b/app/views/combined_videos/index.html.erb
@@ -1,8 +1,9 @@
 <div class="container mb-5 pt-2 px-4 sm:px-6 lg:px-8 max-w-full sm:max-w-xl md:max-w-2xl lg:max-w-4xl">
   <h1 class="text-3xl font-bold mb-4 text-left"><%= t('videos.title') %></h1>
   <div class="mb-4">
-    <%= link_to t('videos.sort_by_likes'), combined_videos_path(q: @search_params.to_h, sort_key: 'likes_count', sort_order: 'desc'), class: "btn btn-accent" %>
-    <%= link_to t('videos.sort_by_notes'), combined_videos_path(q: @search_params.to_h, sort_key: 'notes_count', sort_order: 'desc'), class: "btn btn-accent" %>
+    <%= link_to t('defaults.sort.likes_desc'), combined_videos_path(q: @search_params.to_h, sort_key: 'likes_count', sort_order: 'desc'), class: "btn btn-accent" %>
+    <%= link_to t('defaults.sort.notes_desc'), combined_videos_path(q: @search_params.to_h, sort_key: 'notes_count', sort_order: 'desc'), class: "btn btn-accent" %>
+    <%= link_to t('defaults.sort.created_at_desc'), combined_videos_path(sort_key: 'created_at', sort_order: 'desc'), class: "btn btn-accent" %>
   </div>
   <div class="col-md-12">
     <%= render @paginated_videos %>
