--- a/app/views/youtube_videos/index.html.erb
+++ b/app/views/youtube_videos/index.html.erb
@@ -1,11 +1,12 @@
 <div class="container mb-5 pt-2 px-4 sm:px-6 lg:px-8 max-w-full sm:max-w-xl md:max-w-2xl lg:max-w-4xl">
-  <h1 class="text-3xl font-bold mb-4 text-left">Youtubeビデオ一覧</h1>
+  <h1 class="text-3xl font-bold mb-4 text-left"><%= t('youtube_videos.index.title') %></h1>
   <div class="flex justify-left mb-6">
-    <%= render 'shared/search_form', q: @q %>
+    <%= render 'youtube_videos/search_form', q: @q %>
   </div>
   <div class="mb-4">
-    <%= link_to 'いいね数が多い順', youtube_videos_path(sort: 'likes_desc', q: params[:q]), class: "btn btn-accent" %>
-    <%= link_to 'メモ数が多い順', youtube_videos_path(sort: 'notes_desc', q: params[:q]), class: "btn btn-accent" %>
+    <%= link_to t('defaults.sort.likes_desc'), youtube_videos_path(sort: 'likes_desc', q: @filtered_q_params), class: "btn btn-accent" %>
+    <%= link_to t('defaults.sort.notes_desc'), youtube_videos_path(sort: 'notes_desc', q: @filtered_q_params), class: "btn btn-accent" %>
+    <%= link_to t('defaults.sort.created_at_desc'), youtube_videos_path(sort: 'created_at_desc', q: @filtered_q_params), class: "btn btn-accent" %>
   </div>
   <div class="flex justify-center">
     <div class="w-full">
