--- a/app/views/combined_videos/favorites.html.erb
+++ b/app/views/combined_videos/favorites.html.erb
@@ -1,5 +1,5 @@
 <div class="container mb-5 pt-2 px-4 sm:px-6 lg:px-8 max-w-full sm:max-w-xl md:max-w-2xl lg:max-w-4xl">
-  <h1 class="text-3xl font-bold mb-4 text-left">お気に入りビデオ一覧</h1>
+  <h1 class="text-3xl font-bold mb-4 text-left">お気に入り一覧</h1>
   <div class="flex">
     <div class="w-full">
       <%= render @liked_videos %>
