--- a/app/views/youtube_videos/index.html.erb
+++ b/app/views/youtube_videos/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container mb-5 pt-2 px-4 sm:px-6 lg:px-8 max-w-full sm:max-w-xl md:max-w-2xl lg:max-w-4xl">
-  <h1 class="text-3xl font-bold mb-4 text-left"><%= t('youtube_videos.index.title') %></h1>
+  <h1 class="text-3xl font-bold mb-4 text-left">Youtube一覧</h1>
   <div class="flex justify-left mb-6">
     <%= render 'youtube_videos/search_form', q: @q %>
   </div>
